--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .container .left-container,
 .right-container {
     width: 50%;
+    position: relative;
 
 }
 
@@ -365,8 +366,19 @@ select {
         flex-direction: column;
         padding: 1rem 1rem;
         height: auto;
+        position: relative;
+    }   
+    .time-counter{
+        position: absolute;
+        top: -100vh;
+        width: 100%;
     }
 
+    .container .set-day-time-routine{
+        margin-top: 120px;
+    }
+
+    
     .container .left-container,
     .right-container {
         width: 100%;
@@ -425,5 +437,73 @@ select {
 
     .container .left-container .logo img {
         width: 100%;
+    }
+}
+@media (max-width:540px) {
+    
+    .time-counter{
+        position: absolute;
+        top: -122vh;
+        width: 100%;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 120px;
+    }
+}
+
+@media (max-width:414px) {
+    
+    .time-counter{
+        position: absolute;
+        top: -98vh;
+        width: 100%;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 120px;
+    }
+
+}
+
+@media (max-width:396px) {
+    
+    .time-counter{
+        position: absolute;
+        top: -105vh;
+        width: 100%;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 120px;
+    }
+
+}
+
+
+@media (max-width:380px) {
+    
+    .time-counter{
+        position: absolute;
+        top: -133vh;
+        width: 100%;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 120px;
+    }
+}
+
+
+@media (max-width:363px) {
+    
+    .time-counter{
+        position: absolute;
+        top: -120vh;
+        width: 100%;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 120px;
     }
 }
