--- a/style.css
+++ b/style.css
@@ -370,12 +370,19 @@ select {
     }   
     .time-counter{
         position: absolute;
-        top: -100vh;
+        top: -118vh;
         width: 100%;
     }
 
+    .messages {
+        height: 60px;
+        font-size: 15px;
+        position: absolute;
+        top: 20vh;
+    }
+
     .container .set-day-time-routine{
-        margin-top: 120px;
+        margin-top: 160px;
     }
 
     
@@ -390,10 +397,7 @@ select {
 
     }
 
-    .messages {
-        height: 60px;
-        font-size: 15px;
-    }
+    
 
     .set-alarm {
         width: 100%;
@@ -443,67 +447,157 @@ select {
     
     .time-counter{
         position: absolute;
-        top: -122vh;
+        top: -118vh;
         width: 100%;
     }
 
+    .messages {
+        height: 60px;
+        font-size: 15px;
+        position: absolute;
+        top: 20vh;
+    }
+
     .container .set-day-time-routine{
-        margin-top: 120px;
+        margin-top: 160px;
+    }
+
+}
+
+@media (max-width:420px) {
+
+
+    .time-counter{
+        position: absolute;
+        top: -95vh;
+        width: 100%;
+    }
+
+    .messages {
+        height: 60px;
+        font-size: 15px;
+        position: absolute;
+        top: 18vh;  
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 180px;
     }
 }
 
 @media (max-width:414px) {
-    
+
+
     .time-counter{
         position: absolute;
-        top: -98vh;
+        top: -92vh;
         width: 100%;
     }
 
-    .container .set-day-time-routine{
-        margin-top: 120px;
+    .messages {
+        height: 60px;
+        font-size: 15px;
+        position: absolute;
+        top: 18vh;  
     }
 
+    .container .set-day-time-routine{
+        margin-top: 180px;
+    }
 }
 
 @media (max-width:396px) {
     
     .time-counter{
         position: absolute;
-        top: -105vh;
+        top: -100vh;
         width: 100%;
     }
 
-    .container .set-day-time-routine{
-        margin-top: 120px;
+    .messages {
+        height: 60px;
+        font-size: 15px;
+        position: absolute;
+        top: 20vh;
     }
 
+    .container .set-day-time-routine{
+        margin-top: 180px;
+    }
 }
 
 
 @media (max-width:380px) {
-    
+    .box-time {
+        font-size: 12px;
+    }
+
+    .box-time:nth-child(5) {
+        font-size: 18px;
+    }
     .time-counter{
         position: absolute;
-        top: -133vh;
+        top: -128vh;
         width: 100%;
+    }
+    .greeting-message h5 {
+        font-size: 20px;
+    }
+    .messages {
+        font-size: 13px;
+        position: absolute;
+        top: 24vh;
     }
 
     .container .set-day-time-routine{
-        margin-top: 120px;
+        margin-top: 180px;
+    }
+    .container .left-container .logo {
+        width: 160px;
     }
 }
 
 
 @media (max-width:363px) {
-    
+    .container .left-container .logo {
+        width: 150px;
+    }
     .time-counter{
         position: absolute;
-        top: -120vh;
+        top: -115vh;
         width: 100%;
     }
 
+    .messages {
+        position: absolute;
+        top: 22vh;
+    }
+
     .container .set-day-time-routine{
-        margin-top: 120px;
+        margin-top: 180px;
+    }
+}
+
+@media (max-width:285px) {
+    .first-head-time {
+        padding: 5px;
+        gap: 1px;
+    
+    
+    }
+    .time-counter{
+        position: absolute;
+        top: -132vh;
+        width: 100%;
+    }
+
+    .messages {
+        position: absolute;
+        top: 22vh;
+        font-size: 12px;
+    }
+
+    .container .set-day-time-routine{
+        margin-top: 180px;
     }
 }
